kolibri-server (0.5.0~alpha-0ubuntu1) bionic; urgency=medium

  * Bumped python minimum version to 3.6
  * Added kolibri build dependency to automate error pages creation (Closes: #96)
  * debian/rules modified to automate error pages creation
  * debian/compat bumped to version 10
  * Improved README.rst file (thanks to Shrenik Bhura)

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Wed, 19 Apr 2023 19:52:27 +0200

kolibri-server (0.4.0-0ubuntu2) bionic; urgency=high

  * Fix daemon to start services correctly

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Tue, 30 Nov 2021 20:09:32 +0100

kolibri-server (0.4.0-0ubuntu1) bionic; urgency=medium

  * export KOLIBRI_INSTALLATION_TYPE for kolibri stats

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Wed, 24 Nov 2021 19:53:34 +0100

kolibri-server (0.4.0~beta1-0ubuntu1) bionic; urgency=low

  * New upstream release, compatible with kolibri 0.15.x
  * nginx.conf very simplified
  * kolibri_server_setup.py with:
    - creation of KOLIBRI_HOME/nginx.conf with ZIP_PORT
    - handling of new redis options
    - stop adding deprecated CHERRYPY_START option
  * hashi_uwsgi.ini for zip_port server
  * debconf template to select ZIP_PORT
  * postinst, postrm: backup/restore previous kolibri options
  * kolibri-server.init changed to start one more uwsgi isntance

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Fri, 05 Nov 2021 18:45:08 +0100

kolibri-server (0.3.8-0ubuntu1) bionic; urgency=high

  * Fix python code in kolibri_server_setup
  * Modify init script for a better systemd handling

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Fri, 05 Nov 2021 17:09:50 +0100

kolibri-server (0.3.7-0ubuntu1) bionic; urgency=low

  [ José L. Redrejo Rodríguez ]
  * Build kolibri-server as a native package
  * If port 80 is selected when using debconf, remove default nginx symlink
  * Avoid error on uwsgi pid permissions
  * Bump needed kolibri version to support redis options

  [ Benjamin Bach ]