@@ -6,7 +6,11 @@
 override_dh_systemd_enable:
 	dh_systemd_enable --name=kolibri-server
 
+
+override_dh_builddeb:
+	dh_builddeb -- -Zgzip
+
 override_dh_compress:
 	# Create nginx error pages
-	kolibri manage loadingpage --output-dir $(CURDIR)/debian/kolibri-server/usr/share/kolibri/error_pages --version-text $(shell dpkg-parsechangelog -SVersion)
+	kolibri manage loadingpage --reload --output-dir $(CURDIR)/debian/kolibri-server/usr/share/kolibri/error_pages --version-text $(shell dpkg-parsechangelog -SVersion)
 	dh_compress
